--- a/06_projects/2_BMI_Calc/style.css
+++ b/06_projects/2_BMI_Calc/style.css
@@ -5,7 +5,7 @@
 
 .navbar {
     display: flex;
-    background: black;
+    background: rgb(86, 86, 86);
     color: white;
     justify-content: center;
     text-align: center;
